--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,24 @@ nav.navbar li a {
   border-color: #14A5FF;
   border-width: 2px;
  }
+
+ .admin{
+  position: relative;
+  background-color: white;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  margin-left: 0%;
+  color: #1479FF;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 4%;
+ }
+ .line{
+  text-align: justify;
+  color: black;
+  height: 20px;
+ }
  
  
 
