--- a/src/App.css
+++ b/src/App.css
@@ -213,14 +213,13 @@ nav.navbar li a {
 
  .profile{
   position: relative;
-  background-color: white;
+  background: url("./img/profbg.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
-  margin-left:10%;
-  margin-right: 10%;
   color: #1479FF;
   font-size: 20px;
+  overflow: hidden;
  }
 
  .circle{
@@ -237,12 +236,22 @@ nav.navbar li a {
 
  .profpic{
   height: 20vh;
-  margin-left: 45%;
+  margin-left:  40%;
   margin-right: 40%;
-  margin-top: 5%;
+  margin-top: 7%;
   margin-bottom: 4%;
  }
  
+ .profcontent{
+  margin-left: 25%;
+  margin-right: 20%;
+  margin-top: 7%;
+  text-align: justify;
+  font-family: lucida black;
+  color: #143b68;
+  font-weight: bold;
+  font-size: 30px;
+ }
  
 
 
