--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 .btn1{
   width: 10vw;
   height: 7vh;
-  margin-right: 1%;
+  margin-right: 6%;
   margin-left: 6%;
   border-radius: 10px;
   border-color: #1479FF;
@@ -44,7 +44,7 @@
 .btn1:hover{
   width: 10vw;
   height: 7vh;
-  margin-right: 1%;
+  margin-right: 6%;
   margin-left: 6%;
   border-radius: 10px;
   background-color: #1479FF;
@@ -183,11 +183,9 @@ background-position: center;
 height: 100vh;
 margin-left: 0%;
 color: #1479FF;
-padding-left: 3%;
-padding-right: 3%;
-padding-top: 4%;
 font-family: Roboto;
 font-size:20px;
+margin-top: 0%;
 }
 .line{
 text-align: justify;
@@ -204,9 +202,6 @@ background-position: center;
 height: 100vh;
 margin-left: 0%;
 color: #1479FF;
-padding-left: 3%;
-padding-right: 3%;
-padding-top: 4%;
 font-family: Roboto;
 font-size:20px;
 }
@@ -303,4 +298,9 @@ margin-left: 10%;
 
 .navlogo{
 height: 7vh;
+}
+
+.admin-content{
+  margin-left: 2%;
+  margin-right: 2%;
 }
